test/mutation_analysis/s0561_array_partition_i/hafis/o3/mutants/7/result.txt
./test/mutation_analysis/s0561_array_partition_i/hafis/o3/mutants/7/Solution.java:18: error: unreachable statement
        for (int i = 0; false; i = i + 2) {
                                          ^
1 error
